# vnpy_ctastrategy

./: .flake8  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pythonapp.yml
vnpy_cta_strategy/: backtesting.py
vnpy_ctastrategy/: __init__.py  backtesting.py  base.py  engine.py  etf_template.py  template.py
vnpy_ctastrategy/i18n/: build_hook.py
vnpy_ctastrategy/i18n/en/LC_MESSAGES/: vnpy_ctastrategy.po
vnpy_ctastrategy/locale/: __init__.py  build_hook.py  generate_mo.bat  generate_pot.bat  vnpy_ctastrategy.pot
vnpy_ctastrategy/locale/en/LC_MESSAGES/: vnpy_ctastrategy.po
vnpy_ctastrategy/strategies/: atr_rsi_strategy.py  boll_channel_strategy.py  double_ma_strategy.py  dual_thrust_strategy.py  etf_cta_strategy.py  king_keltner_strategy.py  multi_signal_strategy.py  multi_timeframe_strategy.py  spread_and_moment_profit.py  test_strategy.py  turtle_signal_strategy.py
vnpy_ctastrategy/ui/: __init__.py  rollover.py  widget.py
